minijava/src/parser/jcc/JCCMiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. JCCMiniJavaParser.java */
package parser.jcc;

import ast.*;
import java.util.ArrayList;
import java.util.List;

@SuppressWarnings("all")
public class JCCMiniJavaParser implements JCCMiniJavaParserConstants {

  final public Program Program() throws ParseException {
        MainClass mc;
        List<ClassDecl> cl = new ArrayList<ClassDecl>();
        ClassDecl c;
    mc = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
                  cl.add(c);
    }
    jj_consume_token(0);
                                                          {if (true) return new Program(mc, new NodeList<ClassDecl>(cl));}
    throw new Error("Missing return statement in function");
  }

  final public MainClass MainClass() throws ParseException {
        Token className, argName;
        Statement s;
    jj_consume_token(CLASS);
    className = jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    argName = jj_consume_token(IDENTIFIER);
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
                                                          {if (true) return new MainClass(className.image, argName.image, s);}
    throw new Error("Missing return statement in function");
  }

  final public ClassDecl ClassDecl() throws ParseException {
        Token name, supername = new Token();
        List<VarDecl> vl = new ArrayList<VarDecl>();
        VarDecl v;
        List<MethodDecl> ml = new ArrayList<MethodDecl>();
        MethodDecl m;
    jj_consume_token(CLASS);
    name = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      jj_consume_token(EXTENDS);
      supername = jj_consume_token(IDENTIFIER);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOL:
      case INT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      v = FieldVarDecl();
                                                          vl.add(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      m = MethodDecl();
                                                          ml.add(m);
    }
    jj_consume_token(RBRACE);
                                                          {if (true) return new ClassDecl(name.image, supername.image, new NodeList<VarDecl>(vl), new NodeList<MethodDecl>(ml));}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl FieldVarDecl() throws ParseException {
        Type type;
        Token name;
    type = Type();
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(SEMICOLON);
                                                          {if (true) return new VarDecl(VarDecl.Kind.FIELD, type, name.image);}
    throw new Error("Missing return statement in function");
  }

  final public MethodDecl MethodDecl() throws ParseException {
        Type returnType;
        Token name;
        List<VarDecl> fl = new ArrayList<VarDecl>();
        VarDecl formal;
        List<VarDecl> ll = new ArrayList<VarDecl>();
        VarDecl local;
        List<Statement> sl = new ArrayList<Statement>();
        Statement s;
        Expression returnVal;
    jj_consume_token(PUBLIC);
    returnType = Type();
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
    case INT:
    case IDENTIFIER:
      formal = FormalVarDecl();
                                                  fl.add(formal);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        formal = FormalVarDecl();
                                                    fl.add(formal);
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_5;
      }
      local = LocalVarDecl();
                                                  ll.add(local);
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case PRINT:
      case LBRACE:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      s = Statement();
                                                          sl.add(s);
    }
    jj_consume_token(RETURN);
    returnVal = Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
                                                          {if (true) return new MethodDecl(returnType, name.image, new NodeList<VarDecl>(fl), new NodeList<VarDecl>(ll), new NodeList<Statement>(sl), returnVal);}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl LocalVarDecl() throws ParseException {
        Type type;
        Token name;
    type = Type();
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(SEMICOLON);
                                                          {if (true) return new VarDecl(VarDecl.Kind.LOCAL, type, name.image);}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl FormalVarDecl() throws ParseException {
        Type type;
        Token name;
    type = Type();
    name = jj_consume_token(IDENTIFIER);
                                                  {if (true) return new VarDecl(VarDecl.Kind.FORMAL, type, name.image);}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {
        Token type;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOL:
      jj_consume_token(BOOL);
                                                          {if (true) return new BooleanType();}
      break;
    case INT:
      if (jj_2_2(2)) {
        jj_consume_token(INT);
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
                                                                  {if (true) return new IntArrayType();}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
          jj_consume_token(INT);
                                                          {if (true) return new IntegerType();}
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    case IDENTIFIER:
      type = jj_consume_token(IDENTIFIER);
                                                  {if (true) return new ObjectType(type.image, null);}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Statement Statement() throws ParseException {
        Statement s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      s = Block();
                                                                  {if (true) return s;}
      break;
    case IF:
      s = If();
                                                                  {if (true) return s;}
      break;
    case WHILE:
      s = While();
                                                                  {if (true) return s;}
      break;
    case PRINT:
      s = Print();
                                                                  {if (true) return s;}
      break;
    default:
      jj_la1[9] = jj_gen;
      if (jj_2_3(2)) {
        s = Assign();
                                                                  {if (true) return s;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          s = ArrayAssign();
                                                          {if (true) return s;}
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Block Block() throws ParseException {
        List<Statement> sl = new ArrayList<Statement>();
        Statement s;
    jj_consume_token(LBRACE);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case PRINT:
      case LBRACE:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      s = Statement();
                                                            sl.add(s);
    }
    jj_consume_token(RBRACE);
                                                                  {if (true) return new Block(new NodeList<Statement>(sl));}
    throw new Error("Missing return statement in function");
  }

  final public If If() throws ParseException {
        Expression tst;
        Statement thn, els;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    tst = Expression();
    jj_consume_token(RPAREN);
    thn = Statement();
    jj_consume_token(ELSE);
    els = Statement();
                                                          {if (true) return new If(tst, thn, els);}
    throw new Error("Missing return statement in function");
  }

  final public While While() throws ParseException {
        Expression tst;
        Statement bdy;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    tst = Expression();
    jj_consume_token(RPAREN);
    bdy = Statement();
                                                          {if (true) return new While(tst, bdy);}
    throw new Error("Missing return statement in function");
  }

  final public Print Print() throws ParseException {
        Expression e;
    jj_consume_token(PRINT);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
                                                                  {if (true) return new Print(e);}
    throw new Error("Missing return statement in function");
  }

  final public Assign Assign() throws ParseException {
        Token name;
        Expression v;
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(ASSIGN);
    v = Expression();
    jj_consume_token(SEMICOLON);
                                                                  {if (true) return new Assign(new Identifier(name.image), v);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayAssign ArrayAssign() throws ParseException {
        Token name;
        Expression i, v;
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACKET);
    i = Expression();
    jj_consume_token(RBRACKET);
    jj_consume_token(ASSIGN);
    v = Expression();
    jj_consume_token(SEMICOLON);
                                                                  {if (true) return new ArrayAssign(new Identifier(name.image), i, v);}
    throw new Error("Missing return statement in function");
  }

  final public Expression Expression() throws ParseException {
        Expression a1, a2;
    a1 = AndTerm();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_8;
      }
      jj_consume_token(AND);
      a2 = AndTerm();
                                                                  a1 = new And(a1, a2);
    }
                                                                          {if (true) return a1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression AndTerm() throws ParseException {
        Expression l1, l2;
    l1 = LessThanTerm();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LESSTHAN:
      jj_consume_token(LESSTHAN);
      l2 = LessThanTerm();
                                                                  l1 = new LessThan(l1, l2);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
                                                                          {if (true) return l1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression LessThanTerm() throws ParseException {
        Expression t1, t2;
    t1 = Term();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        t2 = Term();
                                                                                  t1 =  new Plus(t1, t2);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        t2 = Term();
                                                                                  t1 = new Minus(t1, t2);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                                                                          {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression Term() throws ParseException {
        Expression f1, f2;
    f1 = Factor();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIMES:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_10;
      }
      jj_consume_token(TIMES);
      f2 = Factor();
                                                                  f1 = new Times(f1, f2);
    }
                                                                          {if (true) return f1;}
    throw new Error("Missing return statement in function");
  }

  final public Not Not() throws ParseException {
        Expression f;
    jj_consume_token(NOT);
    f = Factor();
                                                                  {if (true) return new Not(f);}
    throw new Error("Missing return statement in function");
  }

  final public Expression Factor() throws ParseException {
        Token literal;
        Expression b, e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      literal = jj_consume_token(INTEGER_LITERAL);
                                                  {if (true) return new IntegerLiteral(literal.image);}
      break;
    case TRUE:
      literal = jj_consume_token(TRUE);
                                                          {if (true) return new BooleanLiteral(true);}
      break;
    case FALSE:
      literal = jj_consume_token(FALSE);
                                                          {if (true) return new BooleanLiteral(false);}
      break;
    case NOT:
      b = Not();
                                                                  {if (true) return b;}
      break;
    case THIS:
    case NEW:
    case LPAREN:
    case IDENTIFIER:
      b = Binding();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
      case DOT:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          jj_consume_token(LBRACKET);
          e = Expression();
          jj_consume_token(RBRACKET);
                                                                          {if (true) return new ArrayLookup(b, e);}
          break;
        case DOT:
          jj_consume_token(DOT);
          jj_consume_token(LENGTH);
                                                                          {if (true) return new ArrayLength(b);}
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
                                                                          {if (true) return b;}
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expression Binding() throws ParseException {
        Expression e;
        Token t, method;
        NodeList<Expression> el;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case THIS:
      jj_consume_token(THIS);
                                                                          e = new This();
      break;
    default:
      jj_la1[20] = jj_gen;
      if (jj_2_4(2)) {
        e = NewArray();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          e = NewObject();
          break;
        case IDENTIFIER:
          t = jj_consume_token(IDENTIFIER);
                                                                  e = new Identifier(t.image);
          break;
        case LPAREN:
          jj_consume_token(LPAREN);
          e = Expression();
          jj_consume_token(RPAREN);
          break;
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    label_11:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_11;
      }
      jj_consume_token(DOT);
      method = jj_consume_token(IDENTIFIER);
      el = ExpressionList();
                                                          e = new Call(e, method.image, el);
    }
                                                                                  {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  final public NewArray NewArray() throws ParseException {
        Expression n;
    jj_consume_token(NEW);
    jj_consume_token(INT);
    jj_consume_token(LBRACKET);
    n = Expression();
    jj_consume_token(RBRACKET);
                                                                  {if (true) return new NewArray(n);}
    throw new Error("Missing return statement in function");
  }

  final public NewObject NewObject() throws ParseException {
        Token type;
    jj_consume_token(NEW);
    type = jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
                                                                  {if (true) return new NewObject(type.image);}
    throw new Error("Missing return statement in function");
  }

  final public NodeList<Expression> ExpressionList() throws ParseException {
        List<Expression> el = new ArrayList<Expression>();
        Expression e;
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case THIS:
    case NEW:
    case LPAREN:
    case NOT:
    case TRUE:
    case FALSE:
    case INTEGER_LITERAL:
    case IDENTIFIER:
      e = Expression();
                                                                  el.add(e);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_12;
        }
        jj_consume_token(COMMA);
        e = Expression();
                                                                  el.add(e);
      }
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
                                                                  {if (true) return new NodeList<Expression>(el);}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_3R_18() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) return true;
    }
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(INT)) return true;
    return false;
  }

  private boolean jj_3R_17() {
    if (jj_scan_token(BOOL)) return true;
    return false;
  }

  private boolean jj_3R_16() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) return true;
    }
    }
    return false;
  }

  private boolean jj_3_3() {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_13()) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3R_20() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  private boolean jj_3R_19() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3R_13() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_3R_15()) return true;
    return false;
  }

  private boolean jj_3R_14() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_scan_token(INT)) return true;
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public JCCMiniJavaParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[24];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x80,0x100,0x300000,0x200,0x10000000,0x300000,0x101a000,0x200000,0x300000,0x101a000,0x0,0x101a000,0x0,0x0,0x0,0x0,0x0,0x20000000,0x20000000,0x40c0000,0x40000,0x4080000,0x10000000,0x40c0000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x2000,0x0,0x0,0x2000,0x2000,0x0,0x2000,0x0,0x2000,0x2000,0x2,0x4,0x18,0x18,0x20,0x80,0x80,0x3c40,0x0,0x2000,0x0,0x3c40,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[5];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public JCCMiniJavaParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public JCCMiniJavaParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new JCCMiniJavaParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 24; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
